hard-gists/7578539/run.log
=== Docker Run Log for 7578539 ===
Started at: Mi 29. Okt 17:13:51 CET 2025

[2025-10-29 17:13:51] START: Running container for 7578539
[2025-10-29 17:13:51] SUCCESS: Container d447f37552842594df1810d41457d8944444236ea6602c7cfd16039b435ebaaf started for 7578539
=== Container logs for 7578539 ===
  File "/snippet.py", line 112
    print "CTR: " + str(ctr)
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7578539 ===
[2025-10-29 17:13:53] INFO: Container d447f37552842594df1810d41457d8944444236ea6602c7cfd16039b435ebaaf has stopped
